finished draft 8/4/22 2:47pm

--- a/index.html
+++ b/index.html
@@ -176,5 +176,24 @@
           </div>
           </div>
         </section>
+        
+        <section class="finalPrototypeSection">
+          <h1 class="finalHeader">Final Prototype</h1>
+          <div class="container5">
+            <div class="finalprotoImg">
+              <img src="../UX_UI_HW_20/images/fav_app_mockup_1.png" style="width: 360px;">
+            </div>
+            
+            <div class="finalprotoImg">
+              <img src="../UX_UI_HW_20/images/fav_app_mockup1.png" style="width: 360px;">
+            </div>
+
+            <div class="card border-dark mb-3">
+              <div class="card-body text-dark" style="width: 360px;">
+                <h5 class="card-title">try it out yourself! click here to access the figma prototype.</h5>
+              </div>
+            </div>
+          </div>
+        </section>
     </body>
 </html>
